--- a/src/TaskManagementSystem.Application/TaskManagementSystem.Application.csproj
+++ b/src/TaskManagementSystem.Application/TaskManagementSystem.Application.csproj
@@ -12,6 +12,9 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Abp.FluentValidation" Version="10.1.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\TaskManagementSystem.Core\TaskManagementSystem.Core.csproj" />
   </ItemGroup>
 </Project>
